# SolarTracker

./: CMakeLists.txt  README.md
circuitos/: Placa Panel esquematico.kicad_sch
codigo/: main.c
codigo/libs/: panel.c
codigo/libs/inc/: init.h
libs/: init.c
libs/inc/: panel.h
